# FinanceTimeSeriesReviewAgent

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup.py
db/: chroma.sqlite3
src/llm/: llm_config.py
src/research_crew/: main.py
src/research_crew/crews/testcrew/: crew.py
src/research_crew/crews/testcrew/config/: agents.yaml  llmsetting.py  tasks.yaml
src/research_crew/tools/: crewai_tool.md
src/research_crew/tools/his/financial_news/: todo
src/research_crew/utils/: token_tracker.py
src/tech_analysis_crew/: PRD-techanalysis.md  README.md  backend.py  crew.py  fastapi_backend.py  results.md  run_backend copy.py  run_test.sh  start_server.bat  start_server.sh
src/tech_analysis_crew/backup0322/: backend copy.py  crew copy 2.py  crew copy.py  run_backend.py
src/tech_analysis_crew/config/: agent.yaml  crew_config.py  tasks.yaml
src/tech_analysis_crew/trendanalysis/: dataprocess.py  duration_price_analysis.py  main copy.py  trend-insensitive.py  trend-sensitive.py
src/tech_analysis_crew/utils/: __init__.py  dataprocess.py  firecrawl_scrape_web_md_clean.py  serper_tool.py  utility.py
src/tech_analysis_crew/utils/trendanalysis/: dataprocess.py  main.py  trend-sensitive.py
src/tech_analysis_crew/web/: README.md  index.html  requirements.txt  script.js  server copy.py  server.py  start.sh  start_server.sh  styles.css  test_main.py
src/tool/trendanalysis/: main.py  test_main.py  trend-insensitive.py  trend-sensitive.py
src/tool/webscrapy/: web_firecrawl.py
src/tool/websearch/: serper_search.py  tavily_search.py
