[project]
name = "financial-aiagent"
version = "0.1.0"
description = "基于CrewAI的金融时间序列数据分析平台"
authors = [{ name = "Kirk", email = "luokunkirk@outlook.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.16.3",
    "langchain>=0.1.8",
    "langchain-openai>=0.0.6",
    "langchain-anthropic>=0.1.1",
    "langchain-google-genai>=0.0.9",
    "langchain-community>=0.0.21",
    "pydantic>=2.6.1",
    "python-dotenv>=1.0.1",
    "litellm>=1.21.1",
    "openai>=1.12.0",
    "anthropic>=0.18.1",
    "google-generativeai>=0.3.2",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "beautifulsoup4>=4.12.3",
    "requests>=2.31.0",
    "pandas>=2.2.0",
    "numpy>=1.26.3",
    "PyYAML>=6.0.1",
    "rich>=13.3.0",
    "firecrawl>=0.2.0",
    "matplotlib>=3.7.1",
    "seaborn>=0.12.2",
    "scipy>=1.11.3",
    "scikit-learn>=1.3.0",
    "websockets>=11.0.3",
    "lxml>=4.9.2",
    "openpyxl>=3.1.2",
    "tqdm>=4.65.0",
    "pytz>=2023.3",
    "tenacity>=8.2.2",
]

[project.scripts]
run_analysis = "tech_analysis_crew.run_backend:main"
start_server = "tech_analysis_crew.web.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
